# python_startup

./: .gitignore  README.md  main.py  pyproject.toml
data/: small_set.csv
module_one/: numpy_data.py  one.py  pandas_data.py  pyspark_examples.py  pyspark_project.py
module_one.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
module_polars/: polars_examples.py
python_test/: advanced_python.py  group_adjust.py  kj_test1.py
test/: __init__.py  test_one.py  test_pyspark_examples.py
